--- a/PROGA/lab3/build.gradle
+++ b/PROGA/lab3/build.gradle
@@ -18,5 +18,5 @@ test {
     useJUnitPlatform()
 }
 tasks.jar {
-    manifest.attributes("Main-Class": "lab3.Main")
+    manifest.attributes("Main-Class": ",lab3.Main")
 }
