--- a/PROGA/lab6/server/build.gradle
+++ b/PROGA/lab6/server/build.gradle
@@ -21,6 +21,7 @@ sourceSets {
 dependencies {
     implementation project(':common')
     implementation 'com.google.code.gson:gson:2.12.1'
+    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
 }
 
 jar {
